[gd_scene load_steps=2 format=3 uid="uid://cdaydmfjad5ow"]

[ext_resource type="Script" path="res://scenes/ui/user_interface.gd" id="1_3gagj"]

[node name="user_interface" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_3gagj")

[node name="main_menu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background_placeholder" type="ColorRect" parent="main_menu"]
layout_mode = 2
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.262932, 0.262932, 0.262932, 1)

[node name="PanelContainer" type="PanelContainer" parent="main_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -25.0
offset_right = 20.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="main_menu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="main_menu/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="resume_game" type="Button" parent="main_menu/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="start_game" type="Button" parent="main_menu/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="quit_game" type="Button" parent="main_menu/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="score" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="score"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="time_bar" type="NinePatchRect" parent="score/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="score/HBoxContainer/time_bar"]
layout_mode = 2
offset_left = 4.0
offset_right = 190.0
offset_bottom = 550.0
size_flags_horizontal = 3

[node name="NinePatchRect" type="NinePatchRect" parent="score/HBoxContainer/time_bar/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="time_elapsed" type="Label" parent="score/HBoxContainer/time_bar/VBoxContainer/NinePatchRect"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 4.0
offset_right = 186.0
offset_bottom = 27.0
text = "Elapsed time"

[node name="NinePatchRect2" type="NinePatchRect" parent="score/HBoxContainer/time_bar/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="nr_of_tries" type="Label" parent="score/HBoxContainer/time_bar/VBoxContainer/NinePatchRect2"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 4.0
offset_right = 186.0
offset_bottom = 27.0
text = "asdasdas"

[node name="Control" type="Control" parent="score/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="splits_bar" type="NinePatchRect" parent="score/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="score/HBoxContainer/splits_bar"]
layout_mode = 2
offset_left = 4.0
offset_right = 229.0
offset_bottom = 550.0
size_flags_horizontal = 3

[node name="time_splits" type="Label" parent="score/HBoxContainer/splits_bar/VBoxContainer2"]
layout_mode = 2
text = "Current splits"

[connection signal="pressed" from="main_menu/PanelContainer/MarginContainer/VBoxContainer/resume_game" to="." method="_on_resume_game_pressed"]
[connection signal="pressed" from="main_menu/PanelContainer/MarginContainer/VBoxContainer/start_game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="main_menu/PanelContainer/MarginContainer/VBoxContainer/quit_game" to="." method="_on_quit_game_pressed"]
